# Solar-systeme-with-OpenGL

./: CMakeLists.txt  README.md  main.cpp  navigationcontrols.cpp  object.cpp  object.h  pointlight.cpp  pointlight.h  texture.cpp
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
